SERVER-6449 - decide which BOSOT::TIME_UTC variant to use at compile time