src/mongo/util/time_support.h
@@ -19,6 +19,7 @@
 
 #include <ctime>
 #include <string>
+#include <boost/thread/xtime.hpp>
 #include <boost/date_time/posix_time/posix_time.hpp>
 
 #include "mongo/bson/util/misc.h"  // Date_t
@@ -61,5 +62,11 @@ namespace mongo {
     char *ctime(const time_t *timep);
     struct tm *gmtime(const time_t *timep);
     struct tm *localtime(const time_t *timep);
+
+#if defined(MONGO_BOOST_TIME_UTC_HACK) || (BOOST_VERSION >= 105000)
+#define MONGO_BOOST_TIME_UTC boost::TIME_UTC_
+#else
+#define MONGO_BOOST_TIME_UTC boost::TIME_UTC
+#endif
 
 }  // namespace mongo
